fix: icon align in header

--- a/src/components/views/Header/Header.scss
+++ b/src/components/views/Header/Header.scss
@@ -210,16 +210,18 @@
       }
 
       .create {
-        margin-top: 0.1rem;
-
         &-icon {
-          font-size: 1.75rem;
+          font-size: 1.5rem;
         }
 
         a {
           align-items: center;
           display: flex;
           gap: 0.3rem;
+
+          p {
+            padding-top: 0.1rem;
+          }
         }
       }
     }
